--- a/wishlist.html
+++ b/wishlist.html
@@ -2570,7 +2570,7 @@
                                                   --pricing-guest-display-price-alignment: flex-end;
                                                   --pricing-guest-display-price-flex-wrap: wrap;
                                                   --pricing-guest-primary-line-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-line-height: var(
                                                     --f-xgviq
@@ -2584,7 +2584,7 @@
                                                   --pricing-guest-explanation-disclaimer-line-height: 18px;
                                                   --pricing-guest-primary-line-strikethrough-price-font-weight: 600;
                                                   --pricing-guest-primary-line-qualifier-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-qualifier-line-height: var(
                                                     --f-xgviq
@@ -3218,7 +3218,7 @@
                                                   --pricing-guest-display-price-alignment: flex-end;
                                                   --pricing-guest-display-price-flex-wrap: wrap;
                                                   --pricing-guest-primary-line-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-line-height: var(
                                                     --f-xgviq
@@ -3232,7 +3232,7 @@
                                                   --pricing-guest-explanation-disclaimer-line-height: 18px;
                                                   --pricing-guest-primary-line-strikethrough-price-font-weight: 600;
                                                   --pricing-guest-primary-line-qualifier-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-qualifier-line-height: var(
                                                     --f-xgviq
@@ -3962,7 +3962,7 @@
                                                   --pricing-guest-display-price-alignment: flex-end;
                                                   --pricing-guest-display-price-flex-wrap: wrap;
                                                   --pricing-guest-primary-line-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-line-height: var(
                                                     --f-xgviq
@@ -3976,7 +3976,7 @@
                                                   --pricing-guest-explanation-disclaimer-line-height: 18px;
                                                   --pricing-guest-primary-line-strikethrough-price-font-weight: 600;
                                                   --pricing-guest-primary-line-qualifier-font-size: var(
-                                                    --ll-l-ys-f
+                                                    --font-size-md
                                                   );
                                                   --pricing-guest-primary-line-qualifier-line-height: var(
                                                     --f-xgviq
