--- a/places.html
+++ b/places.html
@@ -2540,7 +2540,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -2554,7 +2554,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -3252,7 +3252,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -3266,7 +3266,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -3964,7 +3964,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -3978,7 +3978,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -4676,7 +4676,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -4690,7 +4690,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -5380,7 +5380,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -5394,7 +5394,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -6094,7 +6094,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -6108,7 +6108,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -6806,7 +6806,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -6820,7 +6820,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -7438,7 +7438,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -7452,7 +7452,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -8070,7 +8070,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -8084,7 +8084,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -8783,7 +8783,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -8797,7 +8797,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -9496,7 +9496,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -9510,7 +9510,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -10208,7 +10208,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -10222,7 +10222,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -10920,7 +10920,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -10934,7 +10934,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -11632,7 +11632,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -11646,7 +11646,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -12338,7 +12338,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -12352,7 +12352,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
@@ -13050,7 +13050,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                               --pricing-guest-primary-line-unit-price-font-weight: 800;
                                               --pricing-guest-primary-line-trailing-content-font-size: 14px;
@@ -13064,7 +13064,7 @@
                                                 --font-size
                                               );
                                               --pricing-guest-primary-line-qualifier-line-height: var(
-                                                ---s-l-myu
+                                                --line-height-md
                                               );
                                             "
                                           >
